policies/opentofu/rbac/cis-4.1.3-minimize-wildcard-permissions.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: cis-4-1-3-minimize-wildcard-permissions
spec:
  rules:
    - name: no-wildcard-iam-policies
      assert:
        all:
          - message: "IAM policies should not use wildcard (*) permissions for resources or actions."
            check:
              "(length(planned_values.root_module.resources[?type=='aws_iam_role_policy' && (contains(values.policy, '\"Action\":\"*\"') || contains(values.policy, '\"Resource\":\"*\"'))]) == `0`)": true
