policies/opentofu/rbac/cis-5.1.2-ecr-access-minimization.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: cis-5-1-2-ecr-access-minimization
spec:
  rules:
    - name: minimize-ecr-iam-permissions
      assert:
        all:
          - message: "IAM roles must not have overprivileged policies with Action:* that would include all ECR permissions."
            check:
              (length(planned_values.root_module.resources[?type=='aws_iam_role_policy' && contains(values.policy, '"Action":"*"')]) == `0`): true
